--- a/scripts/vs-corelationplot.rmd
+++ b/scripts/vs-corelationplot.rmd
@@ -137,43 +137,43 @@ for (i in 1:nrow(Corelation_DF)) {
     Corelation_DF$NP[i] = 3
   }
   
-  if (Corelation_DF$SR[i] == "< 10%") {
-    Corelation_DF$SR[i] = 0
-  } else if (Corelation_DF$SR[i] == "10-20%") {
-    Corelation_DF$SR[i] = 0
-  } else if (Corelation_DF$SR[i] == "20-30%") {
-    Corelation_DF$SR[i] = 0
-  } else if (Corelation_DF$SR[i] == "30-50%") {
-    Corelation_DF$SR[i] = 1
-  } else if (Corelation_DF$SR[i] == "50-75%") {
-    Corelation_DF$SR[i] = 1
-  } else if (Corelation_DF$SR[i] == "75-90%") {
-    Corelation_DF$SR[i] = 1
-  } else if (Corelation_DF$SR[i] == "") {
-    Corelation_DF$SR[i] = 0
-  } else {
-    Corelation_DF$SR[i] = 1
-  }
-  
-  
-  
   # if (Corelation_DF$SR[i] == "< 10%") {
-  #   Corelation_DF$SR[i] = 1
+  #   Corelation_DF$SR[i] = 0
   # } else if (Corelation_DF$SR[i] == "10-20%") {
-  #   Corelation_DF$SR[i] = 2
+  #   Corelation_DF$SR[i] = 0
   # } else if (Corelation_DF$SR[i] == "20-30%") {
-  #   Corelation_DF$SR[i] = 3
+  #   Corelation_DF$SR[i] = 0
   # } else if (Corelation_DF$SR[i] == "30-50%") {
-  #   Corelation_DF$SR[i] = 4
+  #   Corelation_DF$SR[i] = 1
   # } else if (Corelation_DF$SR[i] == "50-75%") {
-  #   Corelation_DF$SR[i] = 5
+  #   Corelation_DF$SR[i] = 1
   # } else if (Corelation_DF$SR[i] == "75-90%") {
-  #   Corelation_DF$SR[i] = 6
+  #   Corelation_DF$SR[i] = 1
   # } else if (Corelation_DF$SR[i] == "") {
-  #   Corelation_DF$SR[i] = NA
+  #   Corelation_DF$SR[i] = 0
   # } else {
-  #   Corelation_DF$SR[i] = 7
+  #   Corelation_DF$SR[i] = 1
   # }
+  
+  
+  
+  if (Corelation_DF$SR[i] == "< 10%") {
+    Corelation_DF$SR[i] = 1
+  } else if (Corelation_DF$SR[i] == "10-20%") {
+    Corelation_DF$SR[i] = 2
+  } else if (Corelation_DF$SR[i] == "20-30%") {
+    Corelation_DF$SR[i] = 3
+  } else if (Corelation_DF$SR[i] == "30-50%") {
+    Corelation_DF$SR[i] = 4
+  } else if (Corelation_DF$SR[i] == "50-75%") {
+    Corelation_DF$SR[i] = 5
+  } else if (Corelation_DF$SR[i] == "75-90%") {
+    Corelation_DF$SR[i] = 6
+  } else if (Corelation_DF$SR[i] == "") {
+    Corelation_DF$SR[i] = NA
+  } else {
+    Corelation_DF$SR[i] = 7
+  }
   
   
   
