--- a/scripts/vs-standardpart.rmd
+++ b/scripts/vs-standardpart.rmd
@@ -51,8 +51,8 @@ StandardPart <-
              width = 0.5,
              fill = "steelblue") +
     theme_bw() +
-    scale_y_continuous(breaks = seq(0, 200, by = 50),
-                       limits = c(0, 200)) +
+    scale_y_continuous(breaks = seq(0, 250, by = 50),
+                       limits = c(0, 250)) +
     labs(x = "", y = "Participant count", title = "Faculty Rank") +
     theme(
       panel.grid.major = element_blank(),
@@ -250,7 +250,7 @@ Departmnet<-ggplot(temp, aes(x = "" , y = cou, fill = item)) +
 p <-
   ggplot(data = StandardPart,
          aes(
-           x = factor(record_id),
+           x = as.factor(record_id),
            y = google_scholar_h_index,
            fill = faculty_rank
          )) +
@@ -281,9 +281,10 @@ give.n <- function(x) {
                     )))
 }
 
+# H_index <- StandardPart[!is.na(StandardPart$faculty_rank),]
 
 hindex_boxplot <-
-  ggplot(StandardPart,
+  ggplot(StandardPart[!is.na(StandardPart$google_scholar_h_index),], 
          aes(
            x = factor(faculty_rank),
            y = google_scholar_h_index,
