--- a/scripts/vs-corelationplot.rmd
+++ b/scripts/vs-corelationplot.rmd
@@ -150,7 +150,7 @@ for (i in 1:nrow(Corelation_DF)) {
   } else if (Corelation_DF$SR[i] == "75-90%") {
     Corelation_DF$SR[i] = 1
   } else if (Corelation_DF$SR[i] == "") {
-    Corelation_DF$SR[i] = 0
+    Corelation_DF$SR[i] = NA
   } else {
     Corelation_DF$SR[i] = 1
   }
@@ -178,6 +178,8 @@ for (i in 1:nrow(Corelation_DF)) {
   
   
   if (Corelation_DF$AP[i] == "1-2 weeks") {
+    Corelation_DF$AP[i] = 1
+  } else if (Corelation_DF$AP[i] == "< 1 week") {
     Corelation_DF$AP[i] = 1
   } else if (Corelation_DF$AP[i] == "2-4 weeks") {
     Corelation_DF$AP[i] = 1
@@ -269,6 +271,7 @@ for (i in 1:nrow(Corelation_DF)) {
   }
 }
 
+# NSF	NIH	NASA	DOD	DHS	DOE	Other
 
 table(Corelation_DF$SR)
 
